--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -202,6 +202,42 @@ p {
     background-color: rgba(255, 255, 255, 0.04);
 }
 
+/* Vídeo Tutorial - YouTube */
+.youtube-video {
+    position: relative;
+}
+
+.youtube-video .fa {
+    position: absolute;
+    top: calc(50% - 30px);
+    left: calc(50% - 30px);
+    font-size: 60px;
+    color: #fff;
+    opacity: 0.8;
+    z-index: 20;
+}
+
+.youtube-video:hover .fa {
+    opacity: 1;
+}
+
+.youtube-video .youtube-video-overlay {
+    position: absolute;
+    width: 100%;
+    height: 350px;
+    background-color: rgba(var(--theme-color-primary-rgb), 0.9);
+    z-index: 10;
+    mix-blend-mode: screen;
+}
+
+.youtube-video img {
+    position: relative;
+    z-index: 0;
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+}
+
 /* Search Block */
 .search-block {
     background-color: rgba(0, 0, 0, 0.1);
@@ -218,6 +254,11 @@ p {
 .items-list .product-item {
     overflow: hidden;
     height: 100%;
+}
+
+.items-list .product-item .type-item {
+    margin-bottom: -10px;
+    z-index: 10;
 }
 
 .items-list .product-item .product-item-title {
@@ -241,7 +282,7 @@ p {
 
 .items-list .product-item .product-item-img .badge {
     position: absolute;
-    top: 10px;
+    top: 20px;
     right: 10px;
     z-index: 1;
 }
